# folha-ponto

./: .gitignore  LICENSE  README.md
.github/workflows/: backend-ci.yml
back/: .flake8  Dockerfile  app.py  env  ponto.db  ponto.db.old  pyproject.toml  requirements.txt
back/alembic/: env.py
back/alembic/versions/: 5b46b80ea31e_add_approval_fields_to_justificativas.py  892d18a58755_.py
back/src/: .env.example  app.py  crud.py  database.py  init_db.py  models.py  schemas.py
back/src/routers/: auditoria.py  auth.py  colaboradores.py  justificativas.py  me.py  ponto.py
back/src/utils/: jornada_workalendar.py  response.py  timezone.py
folha-ponto-rh/: README.md  package.json  pnpm-lock.yaml  quasar.config.ts  tsconfig.json
folha-ponto-rh/src/: env.d.ts
folha-ponto-rh/src/boot/: axios.ts
folha-ponto-rh/src/layouts/: MainLayout.vue
folha-ponto-rh/src/pages/: AcessoNegado.vue  BaterPonto.vue  CadastrarColaborador.vue  DashboardPage.vue  EditarPontos.vue  ExcluirPonto.vue  GerenciarAcesso.vue  GerenciarColaboradores.vue  GerenciarJustificativas.vue  InsertNewPonto.vue  Justificativa.vue  JustificativaPonto.vue  LoginPage.vue  MeusPontos.vue  ResetPassword.vue  ResetPasswordLink.vue  VisualizarPontos.vue
folha-ponto-rh/src/router/: index.ts  routes.ts
folha-ponto-rh/src/services/: auth.ts
folha-ponto-rh/src/stores/: auth.ts
front/ponto-registro/: README.md  package.json
front/quasar-project/: package.json  pnpm-lock.yaml
management/manegement/: manage.py
registro-ponto/quasar-project/: README.md  quasar.config.ts
(+9 files in other folders)
