[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = [
    "Lucas Guimaraes Moreira <103656598+JkaiPrime@users.noreply.github.com>"
]
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0"
isort  = "^5.12.0"
mypy = "^1.6.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.16.4"

[tool.flake8]
max-line-length = 120